--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
 
         <button type="submit">로그인</button>
     </form>
-    <p>회원이 아니신가요? <a href="/signup.html">회원 가입</a></p>
+    <p>회원이 아니신가요? <a href="/signup">회원 가입</a></p>
 </div>
 <script>
     document.getElementById('loginForm').addEventListener('submit', function(e) {
