--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -43,7 +43,7 @@
         }).then(response => {
             if (response.ok) {
                 alert('회원 가입 성공!');
-                window.location.href = '/login.html'; // 회원 가입 후 로그인 페이지로 리다이렉션
+                window.location.href = '/login'; // 회원 가입 후 로그인 페이지로 리다이렉션
             } else {
                 return response.text().then(text => {
                     throw new Error(text);
