--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
             }
         }).then(response => {
             if (response.ok) {
-                return response.json(); // 로그인 성공 시 JWT를 포함한 JSON 응답을 반환합니다.
+                return response.text(); // 로그인 성공 시 JWT를 포함한 JSON 응답을 반환합니다.
             } else {
                 throw new Error('로그인 실패');
             }
