--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  lang="ko">
 <head>
     <title>로그인 페이지</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
@@ -41,9 +41,10 @@
             }
         }).then(data => {
             // JWT를 로컬 스토리지에 저장합니다.
-            localStorage.setItem('jwt', data.token);
+            localStorage.setItem('jwt', data);
+            alert("로그인 성공")
             // 로그인 후 홈 페이지로 리다이렉션합니다.
-            window.location.href = '/';
+            window.location.href = '/post-list';
         }).catch(error => {
             alert(error.message);
         });
