--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,9 +39,9 @@
             } else {
                 throw new Error('로그인 실패');
             }
-        }).then(data => {
+        }).then(jwt => {
             // JWT를 로컬 스토리지에 저장합니다.
-            localStorage.setItem('jwt', data);
+            localStorage.setItem('jwt', jwt);
             alert("로그인 성공")
             // 로그인 후 홈 페이지로 리다이렉션합니다.
             window.location.href = '/post-list';
@@ -50,15 +50,6 @@
         });
     });
 
-    // API 요청 시 JWT를 Authorization 헤더에 추가하는 예제
-    function fetchDataWithToken(url) {
-        const token = localStorage.getItem('jwt');
-        return fetch(url, {
-            headers: {
-                'Authorization': 'Bearer ' + token
-            }
-        }).then(response => response.json());
-    }
 </script>
 </body>
 </html>
